# Fuzzing_LTE-M_and_NB-IoT

./: .gitignore  README  README.md  build_script.sh
LTE-M_NB-IoT_FUZZER/: CMakeLists.txt
LTE-M_NB-IoT_FUZZER/configs/Fuzzing_Settings/: main_config.json  serial_config.json  srsran_config.json  timers_config.json
LTE-M_NB-IoT_FUZZER/configs/Fuzzing_Strategies/: none_config.json  none_config_with_predefined_injection_seed.json  none_config_with_predefined_mutation_seed.json  random_config_with_coverage_feedback.json  random_config_wo_coverage_feedback.json
LTE-M_NB-IoT_FUZZER/include/: coverage_tracker.h  dissector.h  field.h  helpers.h  mutation.h  my_logger.h  packet.h  parsed_field.h  patch.h  statistics.h
LTE-M_NB-IoT_FUZZER/include/Base_Station/: base_station.h  base_station_factory.h  srsENB.h  srsENB_ZMQ.h  srsENB_base.h  srsGNB.h  srsGNB_ZMQ.h  srsGNB_base.h
LTE-M_NB-IoT_FUZZER/include/Communication/: shm_MAC_communication.h  shm_RRC_communication.h  srsue_communication.h
LTE-M_NB-IoT_FUZZER/include/Coordinators/: base_coordinator.h  coordinator_factory.h  passive_coordinator.h  srs_coordinator.h
LTE-M_NB-IoT_FUZZER/include/Core_Network/: Open5Gs.h  core_network.h  core_network_factory.h  srsEPC.h
LTE-M_NB-IoT_FUZZER/include/Fuzzers/: base_fuzzer.h
LTE-M_NB-IoT_FUZZER/include/Protocol_Stack/: Custom_Protocol_Stack.h  Dummy_stack.h  Protocol_Stack.h  Protocol_Stack_Base.h  Protocol_Stack_with_srsUE.h  Protocol_type.h  protocol_stack_factory.h  protocol_stack_names.h
LTE-M_NB-IoT_FUZZER/include/UE/: AT_Modem.h  Android_UE.h  DIGI_XBEE3.h  Dummy_UE.h  UE.h  UE_factory.h  UE_names.h  srsUE.h  srsUE_ZMQ.h  srsUE_base.h  srsUE_factory.h
LTE-M_NB-IoT_FUZZER/src/: coverage_requester.cpp  coverage_tracker.cpp  dissector.cpp  field.cpp  helpers.cpp  main.cpp  mutation.cpp  mutator.cpp  my_logger.cpp  packet.cpp  parsed_field.cpp  patch.cpp
LTE-M_NB-IoT_FUZZER/src/Base_Station/: base_station_factory.cpp  srsENB.cpp  srsENB_ZMQ.cpp  srsENB_base.cpp  srsGNB.cpp  srsGNB_ZMQ.cpp  srsGNB_base.cpp
LTE-M_NB-IoT_FUZZER/src/Communication/: shm_MAC_communication.cpp  shm_RRC_communication.cpp  shm_layer_communication.cpp  shm_layer_communication_factory.cpp  srsue_communication.cpp
LTE-M_NB-IoT_FUZZER/src/Coordinators/: active_coordinator.cpp  base_coordinator.cpp  coordinator_factory.cpp  passive_coordinator.cpp  srs_coordinator.cpp
LTE-M_NB-IoT_FUZZER/src/Core_Network/: Open5Gs.cpp  core_network_factory.cpp  srsEPC.cpp
LTE-M_NB-IoT_FUZZER/src/Fuzzers/: base_fuzzer.cpp  dummy_fuzzer.cpp  fuzzer_factory.cpp  random_fuzzer.cpp
LTE-M_NB-IoT_FUZZER/src/Protocol_Stack/: Custom_Protocol_Stack.cpp  Dummy_stack.cpp  Protocol_Stack.cpp  Protocol_Stack_with_srsUE.cpp  Protocol_type.cpp  protocol_stack_factory.cpp
LTE-M_NB-IoT_FUZZER/src/UE/: AT_Modem.cpp  Android_UE.cpp  DIGI_XBEE3.cpp  Dummy_UE.cpp  UE_factory.cpp  srsUE.cpp  srsUE_ZMQ.cpp  srsUE_base.cpp  srsUE_factory.cpp
LTE-M_NB-IoT_FUZZER/visualize_scripts/visualize_coverage_scripts/: visualize_coverage_results_dl_no_cov_diff_ks.sh  visualize_coverage_results_dl_srsenb.sh  visualize_coverage_results_dl_srsue.sh  visualize_coverage_results_dl_srsue_diff_ks.sh  visualize_coverage_results_ul_no_cov_diff_ks.sh  (+3 more)
common/: CMakeLists.txt
(+23 files in other folders)
